# DesignPatternsAndArchitecturalPatterns

./: CMakeLists.txt  PipesAndFilters.py  activeObject.cpp  adapter.cpp  adl.cpp  asyncLazyEager.cpp  bigArray.cpp  bindAndFunction.cpp  bridge.cpp  calculateWithLoop.cpp  car.cpp  composite.cpp  composite.py  conditionVariable.cpp  covariantReturnType.cpp  decorator.cpp  decorator.py  dependencyInjection.cpp  dispatchDynamicPolymorphism.cpp  dispatchHashtable.cpp  dispatchIf.cpp  dispatchStaticPolymorphism.cpp  dispatchSwitch.cpp  dotProduct.cpp  equalityReferenceValue.cpp  facade.cpp  facade.py  factoryMethod.cpp  factoryMethod.py  factoryMethodUniquePtr.cpp  has_typedef_foobar.cpp  hiddenFriend.cpp  iterator.cpp  koenig.cpp  lambdaAndAuto.cpp  mvc.py  nullObject.cpp  nvi.cpp  observer.cpp  observer.py  (+37 more)
solution/: CMakeLists.txt  adapterObject.cpp  bigArray.cpp  compositeModified.cpp  covariantReturnType.cpp  decorator.cpp  decoratorFrame.cpp  dotProductAsync.cpp  hiddenFriendExplicit.cpp  iterator.cpp  money.cpp  strategySort.cpp  swap.cpp  templateCRTPCheck.cpp  templateCRTPRelational.cpp  templateTraitsPrimary.cpp  templatesPolicyDecreasing.cpp  templatesPolicyMap.cpp  threadSafeInterfaceVirtual.cpp  typeErasureTypeInfo.cpp  vectorArithmeticExpressionTemplatesExtend.cpp  vectorArithmeticExpressionTemplatesImproved.cpp
